add specific versions of flywheel PyPI
fixes the behavior of download_bids_project()

--- a/Gear-Building-Tutorial-BIDS-Validator/Dockerfile
+++ b/Gear-Building-Tutorial-BIDS-Validator/Dockerfile
@@ -2,14 +2,14 @@ FROM bids/validator:v1.8.9
 
 RUN apk add --no-cache bash \
         python3 \
-        py-pip \
-  && pip install flywheel-sdk \
-                 flywheel-gear-toolkit    \
-                 flywheel-bids    \
-                 bids_validator   \
+        py-pip
+
+RUN pip install flywheel-sdk~=15.1.0 \
+                flywheel-gear-toolkit~=0.1.3   \
+                flywheel-bids~=0.9.1    \
+                bids_validator   \
   && rm -rf /var/cache/apk/*
 
-  
 ENV FLYWHEEL=/flywheel/v0
 
 RUN mkdir -p ${FLYWHEEL}   \
